# coredrop

./: .dockerignore  .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
charts/coredrop/: Chart.yaml  README.md  README.md.gotmpl  values.yaml
charts/coredrop/templates/: _helpers.tpl  daemonset.yaml  rbac.yaml  serviceaccount.yaml  store-secret.yaml
deploy/local/: Dockerfile  README.md  build-images.sh  cluster-lima-k3s.sh  down.sh  lib.sh  smoke.sh  up.sh
deploy/local/helm-values/: coredrop.local.yaml
deploy/local/minio/: minio.yaml
deploy/local/workloads/: segfault.c  segfault.yaml
src/: backend.rs  buildid.rs  cgroup.rs  config.rs  core_pattern.rs  crictl.rs  events.rs  handler.rs  k8s_events.rs  lib.rs  main.rs  manifest.rs  ratelimit.rs  redact.rs  snapshot.rs  systemd.rs  upload.rs
tests/: crictl.rs  handler.rs
