[package]
name = "coredrop"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Standalone Kubernetes coredump handler: captures fault cores + proc snapshots to object storage with JSON manifest sidecars."

[[bin]]
name = "coredrop"
path = "src/main.rs"

[lib]
name = "coredrop"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "io-util",
    "io-std",
    "fs",
    "process",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# In-memory tar of the pre-reap /proc snapshot
tar = "0.4"

# Core upload: stream core fd -> zstd -> sha256 -> object store, never buffering
object_store = { version = "0.13", features = ["aws", "gcp", "azure"] }
async-compression = { version = "0.4", features = ["tokio", "zstd"] }
sha2 = "0.11"
url = "2"

# CLI config: flags with env-var fallback; secrets (store creds) stay env-only
clap = { version = "4", features = ["derive", "env"] }

# Timestamp formatting in manifest (RFC3339)
chrono = { version = "0.4", default-features = false, features = ["std"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# flock for the rate-limit state file (already transitive via tar -> xattr)
rustix = { version = "1", features = ["fs"] }

# Hand-rolled Kubernetes Event client (daemon side only): already transitive
# via object_store, so the dep tree barely moves.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Errors
anyhow = "1"

# async trait for CaptureBackend
async-trait = "0.1"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"

[dev-dependencies]
object_store = { version = "0.13" }
async-compression = { version = "0.4", features = ["tokio", "zstd"] }
async-trait = "0.1"
futures-util = "0.3"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util"] }
